--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".Home" />
         <activity android:name=".MainActivity" />
         <activity android:name=".CategoriesActivity" />
-        <activity android:name=".DivisionList"></activity>
+        <activity android:name=".DivisionList" />
+        <activity android:name=".RajshaiDistrict"></activity>
     </application>
 
 </manifest>
