--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
         <activity android:name=".Home" />
         <activity android:name=".CategoriesActivity" />
         <activity android:name=".DivisionList" />
-        <activity android:name=".divisions.RajshahiDistrict"></activity>
+        <activity android:name=".divisions.RajshahiDistrict" />
+        <activity android:name=".divisions.SylhetDistrict" />
+        <activity android:name=".divisions.DhakaDistrict"></activity>
     </application>
 
 </manifest>
