sucessful add Barisal District class and activity_barisal_district

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".DivisionList" />
         <activity android:name=".divisions.RajshahiDistrict" />
         <activity android:name=".divisions.ChittagongDistrict" />
-        <activity android:name=".RangpurDistrict"></activity>
+        <activity android:name=".divisions.RangpurDistrict" />
+        <activity android:name=".BarisalDistrict"></activity>
     </application>
 
 </manifest>
