--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".DivisionList" />
         <activity android:name=".divisions.RajshahiDistrict" />
         <activity android:name=".divisions.SylhetDistrict" />
-        <activity android:name=".divisions.DhakaDistrict"></activity>
+        <activity android:name=".divisions.DhakaDistrict" />
+        <activity android:name=".BograRajshahi"></activity>
     </application>
 
 </manifest>
