--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity android:name=".divisions.RajshahiDistrict" />
         <activity android:name=".divisions.SylhetDistrict" />
         <activity android:name=".divisions.DhakaDistrict" />
-        <activity android:name=".BograRajshahi"></activity>
+        <activity android:name=".divisions.districts.Bogra"></activity>
     </application>
 
 </manifest>
