Resolved runtime exceptions.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,11 @@
         <activity android:name=".divisions.RajshahiDistrict" />
         <activity android:name=".divisions.SylhetDistrict" />
         <activity android:name=".divisions.DhakaDistrict" />
-        <activity android:name=".divisions.districts.Bogra"></activity>
+        <activity android:name=".divisions.districts.Bogra" />
+        <activity android:name=".divisions.BarisalDistrict" />
+        <activity android:name=".divisions.ChittagongDistrict" />
+        <activity android:name=".divisions.RangpurDistrict" />
+        <activity android:name=".divisions.RangpurDistrict"></activity>
     </application>
 
 </manifest>
