--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         <activity android:name=".divisions.BarisalDistrict" />
         <activity android:name=".divisions.ChittagongDistrict" />
         <activity android:name=".divisions.RangpurDistrict" />
-        <activity android:name=".divisions.RangpurDistrict"></activity>
+        <activity android:name=".divisions.RangpurDistrict" />
+        <activity android:name=".divisions.KhulnaDistrict" />
+        <activity android:name=".divisions.MymensinghDistrict"></activity>
     </application>
 
 </manifest>
