Delete secretariat activity and class.Add Civil Service activity and class.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity android:name=".divisions.RangpurDistrict" />
         <activity android:name=".divisions.KhulnaDistrict" />
         <activity android:name=".divisions.MymensinghDistrict" />
-        <activity android:name=".MinistriesList"></activity>
+        <activity android:name=".MinistriesList" />
+        <activity android:name=".CivilService"></activity>
     </application>
 
 </manifest>
