List of Ministries activities and classes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,23 @@
         <activity android:name=".divisions.KhulnaDistrict" />
         <activity android:name=".divisions.MymensinghDistrict" />
         <activity android:name=".MinistriesList" />
-        <activity android:name=".CivilService"></activity>
+        <activity android:name=".CivilService" />
+        <activity android:name=".ministries.Agriculture" />
+        <activity android:name=".ministries.Commerce" />
+        <activity android:name=".ministries.CivilAviation" />
+        <activity android:name=".ministries.Education" />
+        <activity android:name=".ministries.Enviroment" />
+        <activity android:name=".ministries.Finance" />
+        <activity android:name=".ministries.Fisheries" />
+        <activity android:name=".ministries.Health" />
+        <activity android:name=".ministries.Industries" />
+        <activity android:name=".ministries.Liberation" />
+        <activity android:name=".ministries.PublicAdministration" />
+        <activity android:name=".ministries.Power" />
+        <activity android:name=".ministries.RailWays" />
+        <activity android:name=".ministries.Textile" />
+        <activity android:name=".ministries.WomenandChildren" />
+        <activity android:name=".ministries.YouthandSports"></activity>
     </application>
 
 </manifest>
