--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".divisions.ChittagongDistrict" />
         <activity android:name=".divisions.RangpurDistrict" />
         <activity android:name=".divisions.MymensinghDistrict" />
+        <activity android:name=".MinistriesList" />
         <activity android:name=".divisions.KhulnaDistrict" />
         <activity android:name=".PostActivity">
 
