--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".divisions.RangpurDistrict" />
         <activity android:name=".divisions.MymensinghDistrict" />
         <activity android:name=".MinistriesList" />
+        <activity android:name=".CivilService" />
         <activity android:name=".divisions.KhulnaDistrict" />
         <activity android:name=".PostActivity">
 
