add Sirajgang district in Rajshahi Division

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity android:name=".PostActivity" />
         <activity android:name=".divisions.districts.Natore" />
         <activity android:name=".divisions.districts.Pabna" />
-        <activity android:name=".divisions.districts.Rajshahi"></activity>
+        <activity android:name=".divisions.districts.Rajshahi" />
+        <activity android:name=".Sirajgang"></activity>
     </application>
 
 </manifest>
